[BE] Update confirmation email fallback text

--- a/backend/resources/templates/emails/appointment-confirmation.html
+++ b/backend/resources/templates/emails/appointment-confirmation.html
@@ -199,7 +199,7 @@
                 <a href="https://facebook.com/doroshstudio">Facebook</a>
             </div>
 
-            <div>© 2025 Dorosh Studio. Alle Rechte vorbehalten.</div>
+            <div>© {{currentYear}} Dorosh Studio. Alle Rechte vorbehalten.</div>
         </div>
     </div>
 </body>
